--- a/src/main/webapp/Calculadora.html
+++ b/src/main/webapp/Calculadora.html
@@ -1,39 +1,69 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculadora</title>
-    <link href="https://fonts.googleapis.com/css2?family=Fraunces&display=swap" rel="stylesheet">
-    <link href="layout.css" rel="stylesheet" />
-   
-</head>
-<body>
-    <div class="container">
-        <div class="calculadora">
-            <div class="display">
-                <div id="valor-anterior"></div>
-                <div id="valor-actual"></div>
-            </div>
-            <button class="col-2" onclick="display.borrarTodo()">C</button>
-            <button onclick="display.borrar()">&larr;</button>
-            <button class="operador" value="dividir">%</button>
-            <button class="numero">7</button>
-            <button class="numero">8</button>
-            <button class="numero">9</button>
-            <button class="operador" value="multiplicar">X</button>
-            <button class="numero">4</button>
-            <button class="numero">5</button>
-            <button class="numero">6</button>
-            <button class="operador" value="restar">-</button>
-            <button class="numero">1</button>
-            <button class="numero">2</button>
-            <button class="numero">3</button>
-            <button class="operador" value="sumar">+</button>
-            <button class="col-2 numero">0</button>
-            <button class="numero">.</button>
-            <button class="operador" value="igual">=</button>
+<html> 
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title> Calculadora </title>
+
+        <link type="text/css" href="layout.css" rel="stylesheet">
+    </head>
+    <body>
+        <div id="aplicacionCalculadora">
+            <form name="Calculadora">
+                <input type="textfield" name="display" autocomplete="of" readonly>
+
+                <input type="button" value="7" onclick="document.Calculadora.display.value+='7'">
+                <input type="button" value="8" onclick="document.Calculadora.display.value+='8'">
+                <input type="button" value="9" onclick="document.Calculadora.display.value+='9'">
+                <input type="button" value="+" onclick="document.Calculadora.display.value+='+'">
+                <br>
+                <input type="button" value="4"onclick="document.Calculadora.display.value+='4'">
+                <input type="button" value="5"onclick="document.Calculadora.display.value+='5'">
+                <input type="button" value="6"onclick="document.Calculadora.display.value+='6'">
+                <input type="button" value="."onclick="document.Calculadora.display.value+='.'">
+                <br>
+                <input type="button" value="1"onclick="document.Calculadora.display.value+='1'">
+                <input type="button" value="2"onclick="document.Calculadora.display.value+='2'">
+                <input type="button" value="3"onclick="document.Calculadora.display.value+='3'">
+                <input type="button" value="X"onclick="document.Calculadora.display.value+='X'">
+                <br>
+                <input type="button" value="0"onclick="document.Calculadora.display.value+='0'">
+                <input type="button" value="C"onclick="document.Calculadora.display.value+=''">
+                <input type="button" value="-"onclick="document.Calculadora.display.value+='-'">
+                <input type="button" value="/"onclick="document.Calculadora.display.value+='/'">
+                <br>
+                <input type="button" value="("onclick="document.Calculadora.display.value+='('">
+                <input type="button" value=")"onclick="document.Calculadora.display.value+=')'">
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            </form>
+
+
         </div>
-    </div>
-</body>
+
+
+
+
+    </body>
+
+
+
 </html>
